updating db tasks

--- a/roles/db/templates/mariadb.repo.j2
+++ b/roles/db/templates/mariadb.repo.j2
@@ -1,7 +1,8 @@
-# MariaDB 10.4 CentOS repository list - created 2020-05-08 22:35 UTC
-# http://downloads.mariadb.org/mariadb/repositories/
+# MariaDB 10.6 CentOS repository list - created 2021-09-26 17:48 UTC
+# https://mariadb.org/download/
 [mariadb]
 name = MariaDB
-baseurl = http://yum.mariadb.org/10.4/centos7-amd64
-gpgkey=https://yum.mariadb.org/RPM-GPG-KEY-MariaDB
+baseurl = https://mirror.rackspace.com/mariadb/yum/10.6/centos8-amd64
+module_hotfixes=1
+gpgkey=https://mirror.rackspace.com/mariadb/yum/RPM-GPG-KEY-MariaDB
 gpgcheck=1
